--- a/WebQuanLyResort/WebQuanLyResort/WebQuanLyResort.csproj
+++ b/WebQuanLyResort/WebQuanLyResort/WebQuanLyResort.csproj
@@ -323,10 +323,10 @@
     <Compile Include="Models\phong.cs" />
     <Compile Include="Models\quyen.cs" />
     <Compile Include="Models\ResortDBContext.cs" />
-    <Compile Include="Models\sysdiagram.cs" />
     <Compile Include="Models\ThaoTacDatPhong.cs" />
     <Compile Include="Models\thietbi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\CheckoutViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -364,6 +364,7 @@
     <Content Include="Views\Phong\Checkout.cshtml" />
     <Content Include="Views\Phong\DatPhongThanhCong.cshtml" />
     <Content Include="Views\Phong\XacNhanThongTin.cshtml" />
+    <Content Include="Views\Home\LichSuDatPhong.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
