--- a/WebQuanLyResort/WebQuanLyResort/Web.config
+++ b/WebQuanLyResort/WebQuanLyResort/Web.config
@@ -64,6 +64,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -83,6 +87,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+	  <add name="ResortDBContextUser" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ResortDBUser.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ResortDBContextString" connectionString="data source=LAPTOP-ED5PBNKM;initial catalog=QLDVRESORT;persist security info=True;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
