ud HoTen register

--- a/WebQuanLyResort/WebQuanLyResort/Web.config
+++ b/WebQuanLyResort/WebQuanLyResort/Web.config
@@ -87,7 +87,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-	  <add name="ResortDBContextUser" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ResortDBQuanLyUser.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="ResortDBContextUser" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ReSortDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ResortDBContextString" connectionString="data source=LAPTOP-ED5PBNKM;initial catalog=QLDVRESORT;persist security info=True;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
