--- a/WebQuanLyResort/WebQuanLyResort/Web.config
+++ b/WebQuanLyResort/WebQuanLyResort/Web.config
@@ -86,8 +86,18 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+
+	<!--Thành Thiện-->
+  <!--<connectionStrings>
 	  <add name="ResortDBContextUser" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ReSortDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ResortDBContextString" connectionString="data source=LAPTOP-ED5PBNKM;initial catalog=QLDVRESORT;persist security info=True;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
+
+
+	<!--Ngọc Thiên-->
+	<!--<connectionStrings>
+		<add name="ResortDBContextUser" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ReSortDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="ResortDBContextString" connectionString="data source=DESKTOP-DA92CAH\SQLEXPRESS01;initial catalog=QLDVRESORT;persist security info=True;user id=sa;password=123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>-->
+	
 </configuration>
